# ChangeLog for sys-fs/encfs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/encfs/ChangeLog,v 1.38 2008/12/13 16:43:00 vanquirius Exp $

  13 Dec 2008; Marcelo Goes <vanquirius@gentoo.org> -encfs-1.2.5.1.ebuild,
  -encfs-1.3.1.1.ebuild, -encfs-1.3.2.1.ebuild, -encfs-1.3.2.1-r1.ebuild,
  -encfs-1.4.2.ebuild:
  Clean old ebuilds.

  01 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> encfs-1.5.ebuild:
  Mark stable on sparc and fix homepage, bug #245864

  16 Nov 2008; Markus Meier <maekke@gentoo.org> encfs-1.5.ebuild:
  amd64/x86 stable, bug #245864

  10 Nov 2008; Marcelo Goes <vanquirius@gentoo.org>
  -files/encfs-1.5-boost-system.patch,
  +files/encfs-1.5-boost-system-and-as-needed.patch, encfs-1.5.ebuild:
  Add as needed patch, patch Makefile.am instead of Makefile.in. Thanks to
  Alexandre Rostovtsev <tetromino at gmail dot com> in bug 245782.

*encfs-1.5 (03 Nov 2008)

  03 Nov 2008; Marcelo Goes <vanquirius@gentoo.org>
  +files/encfs-1.5-boost-system.patch, +encfs-1.5.ebuild:
  1.5 version bump for bugs 240421 and 225969. Thanks to Anders Bach Nielsen
  <abachn at daimi dot au dot dk>, James Brown <Roguelazer at gmail dot com>
  and others.

  17 May 2008; Marcelo Goes <vanquirius@gentoo.org>
  +files/encfs-1.4.2-gcc-4.3.patch, encfs-1.4.2.ebuild:
  Add gcc-4.3 patch for bug 222287. Thanks to Martin Vath <vaeth at
  mathematik.uni-wuerzburg dot de>.

  17 May 2008; Marcelo Goes <vanquirius@gentoo.org> encfs-1.4.2.ebuild:
  Add >=dev-libs/boost-1.34 dependency for bug 222223. Thanks to Remy Blank
  <remy.blank at pobox dot com>.

*encfs-1.4.2 (13 May 2008)

  13 May 2008; Marcelo Goes <vanquirius@gentoo.org> +encfs-1.4.2.ebuild:
  1.4.2 version bump for bug 216306. Thanks to Bram Schoenmakers <me at
  bramschoenmakers dot nl>.

*encfs-1.3.2.1-r1 (04 May 2008)

  04 May 2008; Daniel Black <dragonheart@gentoo.org> encfs-1.3.2.1-r1.ebuild,
  files/encfs-1.3.2.1-gcc-4.3.patch: