@@ -5,13 +5,13 @@ AUX encfs-1.3.2.1-gcc-4.3.patch 6126 RMD160 6a5d61cc965f57f3baf5a2fc1dec0bf7f301
 AUX encfs-1.4.2-gcc-4.3.patch 3177 RMD160 386e547078e2e1304e6e84d14c243ad6c89b2ee1 SHA1 dbf9d60b41ce79edbc96ca301cb1a6c6c5353fc5 SHA256 f957d533b8f6096f05fd1a1c3be48b884c45070f02a41685307fe195ec3c1e6d
 AUX encfs-1.5-boost-system-and-as-needed.patch 795 RMD160 609c3c8cab47a1aba63af5adfb4ce348dd1b1edd SHA1 94f98e040ab50ec301b77d10fb55364ad0adeb6d SHA256 6121bfe7cd4ee574f4f68e2898e7c0382bec09a88756b7804ac4fdfb6729c222
 DIST encfs-1.5-2.tgz 923047 RMD160 c773312e20fa5cb155e0e630cb17afa7c525905f SHA1 7fe225855645d98a33bf9f5fe64ac508fdb75257 SHA256 d3961fa5a83bb2c3242ae579e29aa9f73db1e6969a6b5be66acd952b2f9be112
-EBUILD encfs-1.5.ebuild 985 RMD160 a8f2c2ab35615f248ec763c5c34c2c4511c75392 SHA1 1296aef5e705273c27520b0f91ee12457c725b9b SHA256 a2dbd571762eebcec9bfcccabf0ba0d09fee18bdb7c001a49384212fd17cf8a9
-MISC ChangeLog 6572 RMD160 3880c6dede3aa3a5860fbe102d286386a2fc4dc8 SHA1 ba5c9e49643d4fc7d7e2828e3d1e0427bb6f6325 SHA256 e708224a25dfac003f249f8cbe66f7923313aa8831ac43b46672d95b46c30a8c
+EBUILD encfs-1.5.ebuild 1095 RMD160 b2aa778e4f6262cbc1fe286301886ca95a6d7d61 SHA1 dbe853a9a1e888883f4da830f9fee8861cb800fa SHA256 7aed3157a7752a30ac00c0fecfa0a1b9fbb067cbea100878c81f798907a2f444
+MISC ChangeLog 6870 RMD160 c82f25e84714327961e7470ede71188e359d3b6c SHA1 05c5f0db2cf125a35ad7756e4b828bd70d3004bf SHA256 45864c7e0168c13e658dc85b8e170b80415953790a2226bacccdff7dfd59b3f1
 MISC metadata.xml 262 RMD160 f3d8d0dd73230dfdca175ef66a091c78e44d0f98 SHA1 f08c61f42ce181c625ddaf232ba6e2c86af06250 SHA256 d90fbcb5c6704d3d97dc2cceb80fee7acde549638a4f0270b0d87f64fcee82fa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklD5dQACgkQrV3T0ZYD7E6vTwCfWZTekX14uxhdp6y5Vj0vW44V
-eh8AnRqFGk9o9eEldpCfMcx1vb6JIZt/
-=PrzG
+iEYEARECAAYFAklD55gACgkQrV3T0ZYD7E4ijQCgj/UFzIhb9dn40bjClgyuDjzq
+WfUAnAxEx5yIUqdyhaul/YsxEM4s+u3g
+=5GhS
 -----END PGP SIGNATURE-----
